# litellm_config_builder

./: .gitignore  README.md  pyproject.toml
litellm_config_studio/: cli.py  models.py  server.py
litellm_config_studio/routes/: api.py
litellm_config_studio/services/: compatibility.py
litellm_config_studio/services/cache/: local_cache.py
litellm_config_studio/services/enrichment/: nvidia_build.py
litellm_config_studio/services/generator/: linting.py  yaml_builder.py
litellm_config_studio/services/providers/: base.py  gemini.py  groq.py  nvidia.py  openai_compatible.py  openrouter.py  registry.py  static.py
litellm_config_studio/static/: app.js  styles.css
litellm_config_studio/templates/: index.html
